--- a/templates/articles/index.html.twig
+++ b/templates/articles/index.html.twig
@@ -1,7 +1,8 @@
 {% extends 'base.html.twig' %}
 
-{% block title %}Hello ArticleController!{% endblock %}
+{% block title %}Lineshop
+{% endblock %}
 
 {% block body %}
-<div id="root"></div>
+	<div id="root"></div>
 {% endblock %}
