--- a/templates/registration/register.html.twig
+++ b/templates/registration/register.html.twig
@@ -3,15 +3,44 @@
 {% block title %}Register{% endblock %}
 
 {% block body %}
-    <h1>Register</h1>
-
-    {{ form_start(registrationForm) }}
-        {{ form_row(registrationForm.email) }}
-        {{ form_row(registrationForm.plainPassword, {
+<section class="container">
+    <div class="row">
+        <div class="col">
+            <h1>Inscription</h1>
+            {{ form_start(registrationForm) }}
+            {{ form_row(registrationForm.pseudo) }}
+            {{ form_row(registrationForm.plainPassword, {
             label: 'Password'
-        }) }}
-        {{ form_row(registrationForm.agreeTerms) }}
+            }) }}
 
-        <button type="submit" class="btn">Register</button>
-    {{ form_end(registrationForm) }}
+
+            <fieldset class="mb-3">
+                <legend>
+                    Identité
+                </legend>
+                {{ form_row(registrationForm.email) }}
+
+                {{ form_row(registrationForm.name_user) }}
+                {{ form_row(registrationForm.firstname) }}
+            </fieldset>
+
+            <fieldset class="mb-3">
+                <legend>
+                    Coordonnées
+                </legend>
+                {{ form_row(registrationForm.address) }}
+                {{ form_row(registrationForm.postal_code) }}
+                {{ form_row(registrationForm.city) }}
+
+            </fieldset>
+
+
+            {{ form_row(registrationForm.RGPDConsent) }}
+            <button type="submit" class="btn btn-primary my-3">M'inscrire</button>
+            {{ form_end(registrationForm) }}
+        </div>
+    </div>
+</section>
+
+
 {% endblock %}
