--- a/templates/registration/register.html.twig
+++ b/templates/registration/register.html.twig
@@ -1,46 +1,89 @@
 {% extends 'base.html.twig' %}
 
-{% block title %}Register{% endblock %}
+{% block title %}Register
+{% endblock %}
 
 {% block body %}
-<section class="container">
-    <div class="row">
-        <div class="col">
-            <h1>Inscription</h1>
-            {{ form_start(registrationForm) }}
-            {{ form_row(registrationForm.pseudo) }}
-            {{ form_row(registrationForm.plainPassword, {
+	<div class="container-fluid mb-5">
+		<div class='row header-1 pb-3'>
+			<div class='col-12 col-sm-2 text-center fs-4 fw-bold pt-2'>LineshoP</div>
+			<div class='col-12 col-sm-6 py-3 text-center text-sm-start'>
+				The best online store, for real.
+			</div>
+			<div class='col-3 col-sm-1 py-sm-3 text-center text-success'>
+				<svg xmlns="http://www.w3.org/2000/svg" width="26" height="26" fill="currentColor" class="bi bi-cart4" viewbox="0 0 16 16">
+					<path d="M0 2.5A.5.5 0 0 1 .5 2H2a.5.5 0 0 1 .485.379L2.89 4H14.5a.5.5 0 0 1 .485.621l-1.5 6A.5.5 0 0 1 13 11H4a.5.5 0 0 1-.485-.379L1.61 3H.5a.5.5 0 0 1-.5-.5zM3.14 5l.5 2H5V5H3.14zM6 5v2h2V5H6zm3 0v2h2V5H9zm3 0v2h1.36l.5-2H12zm1.11 3H12v2h.61l.5-2zM11 8H9v2h2V8zM8 8H6v2h2V8zM5 8H3.89l.5 2H5V8zm0 5a1 1 0 1 0 0 2 1 1 0 0 0 0-2zm-2 1a2 2 0 1 1 4 0 2 2 0 0 1-4 0zm9-1a1 1 0 1 0 0 2 1 1 0 0 0 0-2zm-2 1a2 2 0 1 1 4 0 2 2 0 0 1-4 0z"/>
+				</svg>
+			</div>
+			<div class='col-3 col-sm-1 container'>
+				<div class='row'>
+					<div class='text-center text-success align-text-top'>
+						ITEMS
+					</div>
+				</div>
+				<div class='row'>
+					<div class='text-center fw-bold fs-5 pt-2'>
+						0
+					</div>
+				</div>
+			</div>
+			<div class='col-6 col-sm-2 container'>
+				<div class='row'>
+					<div class='text-center text-success'>
+						TOTAL
+					</div>
+				</div>
+				<div class='row'>
+					<div class='text-center fw-bold fs-5 pt-2'>
+						0
+					</div>
+				</div>
+			</div>
+		</div>
+		<div class='row header-2 py-3'>
+			<div class='text-center'>
+				<br/>
+			</div>
+		</div>
+	</div>
+	<section class="container">
+		<div class="row">
+			<div class="col">
+				<h1>Inscription</h1>
+				{{ form_start(registrationForm) }}
+				{{ form_row(registrationForm.pseudo) }}
+				{{ form_row(registrationForm.plainPassword, {
             label: 'Password'
             }) }}
 
 
-            <fieldset class="mb-3">
-                <legend>
-                    Identité
-                </legend>
-                {{ form_row(registrationForm.email) }}
+				<fieldset class="mb-3">
+					<legend>
+						Identité
+					</legend>
+					{{ form_row(registrationForm.email) }}
 
-                {{ form_row(registrationForm.name_user) }}
-                {{ form_row(registrationForm.firstname) }}
-            </fieldset>
+					{{ form_row(registrationForm.name_user) }}
+					{{ form_row(registrationForm.firstname) }}
+				</fieldset>
 
-            <fieldset class="mb-3">
-                <legend>
-                    Coordonnées
-                </legend>
-                {{ form_row(registrationForm.address) }}
-                {{ form_row(registrationForm.postal_code) }}
-                {{ form_row(registrationForm.city) }}
+				<fieldset class="mb-3">
+					<legend>
+						Coordonnées
+					</legend>
+					{{ form_row(registrationForm.address) }}
+					{{ form_row(registrationForm.postal_code) }}
+					{{ form_row(registrationForm.city) }}
 
-            </fieldset>
+				</fieldset>
 
 
-            {{ form_row(registrationForm.RGPDConsent) }}
-            <button type="submit" class="btn btn-primary my-3">M'inscrire</button>
-            {{ form_end(registrationForm) }}
-        </div>
-    </div>
-</section>
+				{{ form_row(registrationForm.RGPDConsent) }}
+				<button type="submit" class="btn btn-primary my-3">M'inscrire</button>
+				{{ form_end(registrationForm) }}
+			</div>
+		</div>
+	</section>
 
 
 {% endblock %}
