--- a/templates/orders/index.html.twig
+++ b/templates/orders/index.html.twig
@@ -54,4 +54,5 @@
 	<button class="btn btn-danger mx-0 mx-sm-3 my-3 col-12 col-sm-2">
 		<a href={{ "order/delete/#{idOrder}" }}>Annuler la commande</a>
 	</button>
+	<script src="js/deleteOrder.js"></script>
 {% endblock %}
