fix bug register

--- a/templates/registration/modify.html.twig
+++ b/templates/registration/modify.html.twig
@@ -46,6 +46,7 @@
 			</div>
 		</div>
 	</div>
+	{{ form(form) }}
 	<button class="btn btn-danger mx-0 mx-sm-3 my-3 col-12 col-sm-1">
 		<a href="/">Annuler</a>
 	</button>
