aadd profil modification in payment area

--- a/templates/orders/index.html.twig
+++ b/templates/orders/index.html.twig
@@ -45,7 +45,12 @@
 				Bienvenue
 				{{email}}, vous pouvez vous
 				<a href='logout' class='text-success'>
-					déconnecter</a>.
+					déconnecter
+				</a>
+				ou modifier vos
+				<a href={{"user/modify/#{items}/#{amount}/payment"}} class="text-success">
+					informations personnelles
+				</a>.
 			</div>
 		</div>
 	</div>
