--- a/templates/orders/index.html.twig
+++ b/templates/orders/index.html.twig
@@ -55,6 +55,8 @@
 		</div>
 	</div>
 	<h1 class="shop text-center text-sm-start">Zone de paiement</h1>
+	
+	<div class="text-success mx-0 mx-sm-3">{{ msg }}</div>
 	<br><br>
 	<button class="btn btn-danger mx-0 mx-sm-3 my-3 col-12 col-sm-2">
 		<a href={{ "order/delete/#{idOrder}" }}>Annuler la commande</a>
