--- a/templates/registration/editPass.html.twig
+++ b/templates/registration/editPass.html.twig
@@ -5,11 +5,6 @@
 
 {% block body %}
 	<div class="container-fluid mb-5">
-        {% for message in app.flashes('error') %}
-        <div class = "col">
-            <div class="col"> {{message}}</div>
-        </div>
-        {% endfor %}
 		<div class='row header-1 pb-3'>
 			<div class='col-12 col-sm-2 text-center fs-4 fw-bold pt-2'>LineshoP</div>
 			<div class='col-12 col-sm-6 py-3 text-center text-sm-start'>
@@ -28,7 +23,7 @@
 				</div>
 				<div class='row'>
 					<div class='text-center fw-bold fs-5 pt-2'>
-						{# {{ items }} #}
+						{{ items }}
 					</div>
 				</div>
 			</div>
@@ -40,7 +35,7 @@
 				</div>
 				<div class='row'>
 					<div class='text-center fw-bold fs-5 pt-2'>
-					{#	{{ amount }} #}
+					{{ amount }}
 					</div>
 				</div>
 			</div>
@@ -56,6 +51,7 @@
 			<div class="col">
 				<h1>Mofication du mot de passe</h1>
 				
+				<div class="text-danger">{{ error }}</div>
                 <form method="post">
 					<div class="form-field">
 						<label for="password">Mot de passe</label>
@@ -67,6 +63,9 @@
 					</div>
                     
                     <button type="submit" class="btn btn-primary my-3">Valider</button>
+					<button class="btn btn-danger mx-0 my-1 col-12 col-sm-1">
+					<a href='{{"/user/modify/#{items}/#{amount}/#{back}" }}'>Annuler</a>
+				</button>
 				</form>	
 			</div>
 		</div>
