--- a/templates/registration/editPass.html.twig
+++ b/templates/registration/editPass.html.twig
@@ -49,7 +49,7 @@
 	<section class="container">
 		<div class="row">
 			<div class="col">
-				<h1>Mofication du mot de passe</h1>
+				<h1>Modification du mot de passe</h1>
 				
 				<div class="text-danger">{{ error }}</div>
                 <form method="post">
