--- a/templates/orders/index.html.twig
+++ b/templates/orders/index.html.twig
@@ -61,5 +61,8 @@
 	<button class="btn btn-danger mx-0 mx-sm-3 my-3 col-12 col-sm-2">
 		<a href={{ "order/delete/#{idOrder}" }}>Annuler la commande</a>
 	</button>
+	<div class="footer fixed-bottom py-3">
+		<a class='mx-0 mx-sm-3 text-white' href="/dev/admin">Page d'administration</a>
+	</div>
 	<script src="js/deleteOrder.js"></script>
 {% endblock %}
