--- a/templates/registration/register.html.twig
+++ b/templates/registration/register.html.twig
@@ -87,6 +87,8 @@
 			</div>
 		</div>
 	</section>
-
+	<div class="footer py-3">
+		<a class='mx-0 mx-sm-3 text-white' href="/dev/admin">Page d'administration</a>
+	</div>
 
 {% endblock %}
