--- a/templates/security/login.html.twig
+++ b/templates/security/login.html.twig
@@ -72,16 +72,16 @@
 					type="hidden" name="_csrf_token" value="{{ csrf_token('authenticate') }}">
 
 					{#
-					Uncomment this section and add a remember_me option below your firewall to activate remember me
-					functionality.
-					See https://symfony.com/doc/current/security/remember_me.html
-	
-					<div class="checkbox mb-3">
-						<label>
-							<input type="checkbox" name="_remember_me"> Remember me
-						</label>
-					</div>
-					#}
+										Uncomment this section and add a remember_me option below your firewall to activate remember me
+										functionality.
+										See https://symfony.com/doc/current/security/remember_me.html
+						
+										<div class="checkbox mb-3">
+											<label>
+												<input type="checkbox" name="_remember_me"> Remember me
+											</label>
+										</div>
+										#}
 					<div class="container-fluid my-3">
 						<div class="row">
 							<button class="btn btn-lg btn-primary col-12 col-sm-3 fs-6" type="submit">
@@ -96,4 +96,7 @@
 			</div>
 		</div>
 	</section>
+	<div class="footer fixed-bottom py-3">
+		<a class='mx-0 mx-sm-3 text-white' href="/dev/admin">Page d'administration</a>
+	</div>
 {% endblock %}
